--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-status": "^1.7.3",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.3",
-    "zod": "^3.22.4"
+    "ts-node-dev": "^2.0.0"
   },
   "name": "assignment2",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
@@ -19,16 +20,14 @@
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node ./dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
     "lint:fix": "npx eslint src --fix",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
